feat: add desktop layout

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,59 @@ body {
   color: var(--text-color);
 }
 
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  color: var(--text-color);
+  padding: 1rem;
+  z-index: 1000;
+  transition: background 0.3s ease;
+}
+
+.navbar.active {
+  background-color: var(--text-color);
+
+  a,
+  .theme-toggle {
+    color: var(--bg-color);
+  }
+}
+
+.nav__logo-nome {
+  display: none;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.menu a {
+  text-decoration: none;
+  color: var(--text-color);
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.menu a:hover {
+  text-decoration: underline;
+}
+
+.theme-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: var(--text-color);
+}
+
 header {
   display: flex;
   flex-direction: column;
@@ -201,6 +254,19 @@ section {
     img {
       width: 100%;
     }
+
+    .project__links a {
+      padding: 0.5rem 1.5rem;
+      background: var(--text-color);
+      outline: 1px solid var(--text-color);
+      color: var(--bg-color);
+      transition: 0.3s;
+
+      &:hover {
+        background: transparent;
+        color: var(--text-color);
+      }
+    }
   }
 }
 
@@ -223,6 +289,11 @@ footer {
       text-decoration: none;
       color: black;
       font-weight: 600;
+
+      &:hover {
+        cursor: pointer;
+        text-decoration: underline;
+      }
     }
   }
 
@@ -240,6 +311,7 @@ footer {
 
       &:hover {
         cursor: pointer;
+        text-decoration: underline;
       }
     }
 
@@ -259,4 +331,105 @@ footer {
 }
 
 @media screen and (min-width: 900px) {
+  .navbar {
+    justify-content: start;
+    padding: 1rem 4rem;
+  }
+  .navbar.active .nav__logo-nome {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--bg-color);
+    font-size: 1.4rem;
+
+    .nav__logo-irokawa {
+      margin-top: -0.7rem;
+      margin-left: 1.8rem;
+      font-weight: 400;
+    }
+  }
+
+  h1 {
+    font-size: 10rem;
+  }
+
+  .logo-nathalia {
+    font-weight: 400;
+  }
+
+  .logo-irokawa {
+    margin-top: -6rem;
+    margin-left: 9rem;
+  }
+
+  .header__subtitle {
+    align-self: flex-start;
+  }
+
+  section {
+    padding: 5rem 4rem;
+  }
+
+  .section__title {
+    font-size: 4rem;
+
+    p {
+      margin-top: -3rem;
+    }
+  }
+
+  #about {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5rem;
+  }
+
+  .about__first-section {
+    display: flex;
+    column-gap: 2rem;
+
+    .section__title {
+      transform: rotate(-90deg);
+    }
+  }
+
+  .list-container {
+    flex-direction: row;
+    width: 100%;
+
+    .list-title {
+      width: 40rem;
+    }
+
+    .list {
+      width: 100%;
+    }
+  }
+
+  .projects-list li {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    column-gap: 4rem;
+  }
+
+  .footer__content {
+    display: flex;
+    column-gap: 20rem;
+    font-size: 1.5rem;
+
+    .footer__email {
+      font-size: 2rem;
+    }
+  }
+
+  footer {
+    .footer__copyright-container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      margin-top: 5rem;
+    }
+  }
 }
